2010-05-12  James Youngman  <jay@gnu.org>

	Prune obsolete items in docs/TODO.
	* docs/TODO: Tests for sact and val exist.  Remove that TODO item.

	Some TODO housekeeping.
	* sf-prs.cc (print_delta): Explain more clearly what get do for
	:BD: in prs if we fail to seek to the body.
	* sccsfile.h (s): Add TODO comment suggesting we use something
	more efficient than mylist<string> for authoried users.
	(sccs_file::admin): Likewise for set_flags and unset_flags
	parameters to this method.

	Remove mylist_delta_list; use more appropriate types for
	loop/length variables.
	* delta-table.h (mylist_delta_list::build_seq_table): Use more
	appropriate (i.e. matching) types for loop variables.
	Get rid of mylist_delta_list and abstract_delta_list.
	* delta-table.cc (delta_at_seq_exists): There is no need for a
	const qualifier for a bool return type; remove it.
	(next_seqno): Just increment the result rather than adding an
	unsigned int, as this simplifies the type combination.
	* sf-get.cc (prepare_seqstate_1): Use size_type types for indexes and
	length variables.

	Use mylist<T>::size_type instead of int.
	* mylist.h (mylist): Introduce size_type, and use it in method
	parameters.
	* rl-merge.cc (merge): Use mylist<release>::size_type.

	Avoid a 'local variable shadows class member' warning.
	* delta-table.h (abstract_delta_list): Avoid having a local shadow
	an instance variable, by renaming the local.

	Weed out some warning options that make sense for C but not C++.
	* configure.ac (UNWANTED_WARNINGS): remove a bunch of warning
	options that don't make sense for C++.

	Remove rundundant call to AC_PROG_RANLIB.
	* configure.ac: Don't call AC_PROG_RANLIB since we're using libtool.

	Make more uses of sccs_pfile const (now that iterating won't
	mutate it).
	* pfile.h (sccs_pfile::find_locked): Make const.
	(sccs_pfile::is_locked): Make const.
	(sccs_pfile::find_to_be_created): Make const.
	(sccs_pfile::is_to_be_created): Make const.